[package]
name = "gamepad-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2" }

[features]
bundled-sdl2 = ["sdl2/bundled"]
